# dtl

./: CMakeLists.txt  _clang-format
examples/: lazy_format_and_ostream_adaptor.cpp
inc/dtl/: format_extend.hpp
